# PDFly-Android

./: build.gradle.kts
.github/workflows/: build.yml  main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PdfNative.cpp
app/src/main/kotlin/com/arvinapp/pdfreader/: MainActivity.kt  PdfNative.kt
app/src/main/res/values/: colors.xml
